package sud_tanj.com.icare.Backend.Utility;

import lombok.Getter;
import lombok.Setter;

/**
 * This class is part of iCare Project
 * Any modified within this class without reading the
 * manual will cause problem!
 * <p>
 * Created by Sudono Tanjung on 07/09/2018 - 9:41.
 * <p>
 * This class last modified by User
 */
public class SystemStatus  {
    @Getter @Setter
    private static Boolean backgroundJobCancel=false;
}
