@startuml

title __UTILITY's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Utility {
        class AnalysisDataSynchronizer {
            - identification : String
            {static} + sync()
            + onDataChange()
            + onCancelled()
            - AnalysisDataSynchronizer()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Utility {
        class SystemStatus {
            {static} - backgroundJobCancel : Boolean
            {static} + setBackgroundJobCancel()
            {static} + getBackgroundJobCancel()
        }
      }
    }
  }
  

  AnalysisDataSynchronizer -up-|> ValueEventListener
  AnalysisDataSynchronizer o-- DataAnalysis : dataAnalysis


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
